Migrate to FastAPI JWT auth

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,12 @@
-DB_URI=localhost
-DB_NAME=tailfin
+#DB_URI=localhost
+#DB_NAME=tailfin
+DB_USER="tailfin-api"
+DB_PWD="tailfin-api-password"
+
+# 60 * 24 * 7 -> 7 days
+#JWT_REFRESH_TOKEN_EXPIRE_MINUTES=10080
+#JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+#JWT_ALGORITHM="HS256"
+JWT_SECRET_KEY="please-change-me"
+JWT_REFRESH_SECRET_KEY="change-me-i-beg-of-you"
