--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,6 @@
-bcrypt==4.0.1
-mongoengine~=0.27.0
 uvicorn~=0.24.0.post1
 fastapi~=0.105.0
 pydantic~=2.5.2
-passlib~=1.7.4
+passlib[bcrypt]~=1.7.4
+motor~=3.3.2
+python-jose[cryptography]~=3.3.0
