Add port configuration option

--- a/api/.env
+++ b/api/.env
@@ -15,3 +15,5 @@ JWT_REFRESH_SECRET_KEY="change-me-i-beg-of-you"
 
 TAILFIN_ADMIN_USERNAME="admin"
 TAILFIN_ADMIN_PASSWORD="change-me-now"
+
+TAILFIN_PORT=8081
