--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@mantine/core": "^7.3.2",
-    "@mantine/dates": "^7.3.2",
-    "@mantine/dropzone": "^7.3.2",
-    "@mantine/form": "^7.3.2",
-    "@mantine/hooks": "^7.3.2",
-    "@mantine/notifications": "^7.3.2",
+    "@mantine/core": "^7.4.0",
+    "@mantine/dates": "^7.4.0",
+    "@mantine/dropzone": "^7.4.0",
+    "@mantine/form": "^7.4.0",
+    "@mantine/hooks": "^7.4.0",
+    "@mantine/notifications": "^7.4.0",
     "@remix-run/css-bundle": "^2.4.1",
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.4.1",
@@ -26,6 +26,7 @@
     "@tanstack/react-query-devtools": "^5.17.0",
     "axios": "^1.6.3",
     "dayjs": "^1.11.10",
+    "dayjs-plugin-utc": "^0.1.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
