Redirect on token expiry

--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@mantine/dropzone": "^7.4.0",
     "@mantine/form": "^7.4.0",
     "@mantine/hooks": "^7.4.0",
+    "@mantine/modals": "^7.4.0",
     "@mantine/notifications": "^7.4.0",
     "@remix-run/css-bundle": "^2.4.1",
     "@remix-run/node": "^2.4.1",
