--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@mantine/core": "^7.4.0",
-    "@mantine/dates": "^7.4.0",
-    "@mantine/dropzone": "^7.4.0",
-    "@mantine/form": "^7.4.0",
-    "@mantine/hooks": "^7.4.0",
-    "@mantine/modals": "^7.4.0",
-    "@mantine/notifications": "^7.4.0",
+    "@mantine/carousel": "^7.4.1",
+    "@mantine/core": "^7.4.1",
+    "@mantine/dates": "^7.4.1",
+    "@mantine/dropzone": "^7.4.1",
+    "@mantine/form": "^7.4.1",
+    "@mantine/hooks": "^7.4.1",
+    "@mantine/modals": "^7.4.1",
+    "@mantine/notifications": "^7.4.1",
     "@remix-run/css-bundle": "^2.4.1",
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.4.1",
@@ -28,6 +29,7 @@
     "axios": "^1.6.3",
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
+    "embla-carousel-react": "^7.1.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
