--- a/web/package.json
+++ b/web/package.json
@@ -27,10 +27,12 @@
     "@tanstack/react-query": "^5.17.0",
     "@tanstack/react-query-devtools": "^5.17.0",
     "axios": "^1.6.3",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
     "embla-carousel-react": "^7.1.0",
     "isbot": "^3.6.8",
+    "mantine-datatable": "^7.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "use-dehydrated-state": "^0.1.0"
